# opengl-boids

./: .gitignore  CMakeLists.txt  imgui.ini  renderdoc-options.cap
shaders/compute/: boids.comp  boids_cell_key.comp  boids_grid_sort.comp  boids_sim.comp  boids_spatial_hist.comp  boids_spatial_key.comp  boids_spatial_post.comp  boids_spatial_radix.comp
shaders/render/: boids.frag  boids.vert  color.vert  cubemap.frag  cubemap.vert
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app.cpp  app.hpp  timer.cpp  timer.hpp  ui.cpp  ui.hpp
src/boids/: CMakeLists.txt  boids_compute.cpp  boids_compute.hpp  boids_data.cpp  boids_data.hpp  boids_material.cpp  boids_material.hpp  boids_mesh_render_data.cpp  boids_mesh_render_data.hpp  boids_params.hpp  boids_shader_timer.cpp  boids_shader_timer.hpp  boids_sim.cpp  boids_sim.hpp  scene.cpp  scene.hpp  ui.cpp  ui.hpp
src/core/: CMakeLists.txt  camera.cpp  camera.hpp  object_3d.cpp  object_3d.hpp
src/render/: CMakeLists.txt  blend_mode.hpp  cubemap.cpp  cubemap.hpp  mesh_instance.cpp  mesh_instance.hpp  renderable.hpp  renderer.cpp  renderer.hpp
src/render/material/: CMakeLists.txt  color_material.cpp  color_material.hpp  material.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp
src/render/mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp  mesh_render_data.cpp  mesh_render_data.hpp  primitives.cpp  primitives.hpp
src/shaders/: CMakeLists.txt  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp
